Asignacion de Variables, ejm I=J

--- a/files/TODO.txt
+++ b/files/TODO.txt
@@ -1,8 +1,10 @@
 EL ARCHIVO VACIO O CON SOLO ESPACIOS DA ERROR
-EL COMENTARIO AL FINAL DE LA LINEA DA ERROR
-**NUMERO DE LINEAS EN BLANCO SOLAS DA ERROR
+VARIAS DECLARACIOENS EN LINEA
 OPERACIONES ARITMETICAS
 OPERACIONES ENTRE BOOLEANOS
 ASIGNACION DE CADENAS
 ASIGNACION DE FLOTS Y INTEGER POR SEPARADO
 AGRUPAR EXPRESION Y VARIABLE PARA PODER HACER X=Y , IF X=10 , ECT
+
+**NUMERO DE LINEAS EN BLANCO SOLAS DA ERROR (varias sentencias separadas por salto de linea Ó varias sentencias que termina en salto de linea)
+**EL COMENTARIO AL FINAL DE LA LINEA DA ERROR (estaba consumiendo el salto de linea)
