Operaciones Matematicas Beta 1. Ejm: DIM I AS INTEGER I=2- 9+1 PRINT I

--- a/files/TODO.txt
+++ b/files/TODO.txt
@@ -6,5 +6,10 @@ ASIGNACION DE CADENAS
 ASIGNACION DE FLOTS Y INTEGER POR SEPARADO
 AGRUPAR EXPRESION Y VARIABLE PARA PODER HACER X=Y , IF X=10 , ECT
 
+PRECEDENCIA DEL - PARA NUMERO NEGATIVOS. Y NO LO TOME UN NUMERO 
+
+VECTORES
+PROCEDIMIENTOS
+
 **NUMERO DE LINEAS EN BLANCO SOLAS DA ERROR (varias sentencias separadas por salto de linea Ó varias sentencias que termina en salto de linea)
 **EL COMENTARIO AL FINAL DE LA LINEA DA ERROR (estaba consumiendo el salto de linea)
