operaciones bool logicas beta listo if con else

--- a/files/TODO.txt
+++ b/files/TODO.txt
@@ -1,12 +1,14 @@
 EL ARCHIVO VACIO O CON SOLO ESPACIOS DA ERROR
 VARIAS DECLARACIOENS EN LINEA
-OPERACIONES ENTRE BOOLEANOS
-ASIGNACION DE FLOTS Y INTEGER POR SEPARADO
 
+ASIGNACION DE FLOTS Y INTEGER POR SEPARADO
 
 VECTORES
 PROCEDIMIENTOS
 
+INPUT
+
+**OPERACIONES ENTRE BOOLEANOS
 **OPERACIONES ARITMETICAS
 **ASIGNACION DE CADENAS
 **AGRUPAR EXPRESION Y VARIABLE PARA PODER HACER X=Y , IF X=10 , ECT
