Leer datos y asignarlos a vector Operaciones con vector INPUT 100% Separacion entre integer y float

--- a/files/TODO.txt
+++ b/files/TODO.txt
@@ -1,13 +1,10 @@
-EL ARCHIVO VACIO O CON SOLO ESPACIOS DA ERROR
 VARIAS DECLARACIOENS EN LINEA
-
-ASIGNACION DE FLOTS Y INTEGER POR SEPARADO
-
-VECTORES
 PROCEDIMIENTOS
+COMPARACIONES BOOL DE CADENAS
 
-INPUT
-
+**INPUT
+**ASIGNACION DE FLOTS Y INTEGER POR SEPARADO
+**VECTORES
 **OPERACIONES ENTRE BOOLEANOS
 **OPERACIONES ARITMETICAS
 **ASIGNACION DE CADENAS
@@ -15,3 +12,4 @@ INPUT
 **PRECEDENCIA DEL - PARA NUMERO NEGATIVOS. Y NO LO TOME UN NUMERO 
 **NUMERO DE LINEAS EN BLANCO SOLAS DA ERROR (varias sentencias separadas por salto de linea Ó varias sentencias que termina en salto de linea)
 **EL COMENTARIO AL FINAL DE LA LINEA DA ERROR (estaba consumiendo el salto de linea)
+**EL ARCHIVO VACIO O CON SOLO ESPACIOS DA ERROR (se agrego una regla en cup que no contiene nada :P)
