procedimientos,, 80% trabajando las variables en el mismo contexto

--- a/files/TODO.txt
+++ b/files/TODO.txt
@@ -1,6 +1,8 @@
 VARIAS DECLARACIOENS EN LINEA
-PROCEDIMIENTOS
 COMPARACIONES BOOL DE CADENAS
+PROCEDIMIENTOS
+
+-Que todo el programa termine en linea nueva,,, 
 
 **INPUT
 **ASIGNACION DE FLOTS Y INTEGER POR SEPARADO
