Operaciones Bool entrte cadenas

--- a/files/TODO.txt
+++ b/files/TODO.txt
@@ -1,9 +1,7 @@
-VARIAS DECLARACIOENS EN LINEA
-COMPARACIONES BOOL DE CADENAS
-PROCEDIMIENTOS
-
--Que todo el programa termine en linea nueva,,, 
-
+**COMPARACIONES BOOL DE CADENAS
+**VARIAS DECLARACIOENS EN LINEA
+**PROCEDIMIENTOS
+**Que todo el programa termine en linea nueva,,, 
 **INPUT
 **ASIGNACION DE FLOTS Y INTEGER POR SEPARADO
 **VECTORES
